Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-5695

Crash when splitting editor with .glsl files

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • Qt Creator 2.3.0
    • Qt Creator 2.2.1
    • Editors
    • None
    • Linux 64-bit (Ubuntu 11.04)
    • 3bf883997f1cc4e0564795c75b77cac5b451cbb3

      Here is a way to crash Qt Creator 2.2.1:

      Start Qt Creator. Open a .glsl file. Split the editor with ctrl-E 2, then remove the split, ctrl-e 0, then add another split, ctrl-e 3. The final split causes a crash.

      It seems it's only happening with .glsl files, I cannot reproduce it with c++ files. If it's difficult to reproduce, send me an email and I can send you a .glsl file that makes it crash.

      Here's a backtrace (not a debug-build, sorry)

      0 TextEditor::BaseTextEditorWidget::mimeType() const /home/ola/bin/qtcreator_src/qt-creator-2.2.1-src/lib/qtcreator/plugins/Nokia/libTextEditor.so 0 0x7fffe50c0c43
      1 GLSLEditor::GLSLTextEditorWidget::languageVariant() const /home/ola/bin/qtcreator_src/qt-creator-2.2.1-src/lib/qtcreator/plugins/Nokia/libGLSLEditor.so 0 0x7fffe12bb592
      2 GLSLEditor::Internal::Highlighter::highlightBlock(QString const&) /home/ola/bin/qtcreator_src/qt-creator-2.2.1-src/lib/qtcreator/plugins/Nokia/libGLSLEditor.so 0 0x7fffe12c49f2
      3 TextEditor::SyntaxHighlighterPrivate::reformatBlock(QTextBlock const&, int, int, int) /home/ola/bin/qtcreator_src/qt-creator-2.2.1-src/lib/qtcreator/plugins/Nokia/libTextEditor.so 0 0x7fffe512423a
      4 TextEditor::SyntaxHighlighterPrivate::reformatBlocks(int, int, int) /home/ola/bin/qtcreator_src/qt-creator-2.2.1-src/lib/qtcreator/plugins/Nokia/libTextEditor.so 0 0x7fffe51243ac
      5 TextEditor::SyntaxHighlighter::rehighlight() /home/ola/bin/qtcreator_src/qt-creator-2.2.1-src/lib/qtcreator/plugins/Nokia/libTextEditor.so 0 0x7fffe512461d
      6 GLSLEditor::GLSLTextEditorWidget::setFontSettings(TextEditor::FontSettings const&) /home/ola/bin/qtcreator_src/qt-creator-2.2.1-src/lib/qtcreator/plugins/Nokia/libGLSLEditor.so 0 0x7fffe12bc598
      7 TextEditor::TextEditorSettings::initializeEditor(TextEditor::BaseTextEditorWidget*) /home/ola/bin/qtcreator_src/qt-creator-2.2.1-src/lib/qtcreator/plugins/Nokia/libTextEditor.so 0 0x7fffe510d56e
      8 GLSLEditor::Internal::GLSLEditorPlugin::initializeEditor(GLSLEditor::GLSLTextEditorWidget*) /home/ola/bin/qtcreator_src/qt-creator-2.2.1-src/lib/qtcreator/plugins/Nokia/libGLSLEditor.so 0 0x7fffe12bfbe0
      9 GLSLEditor::Internal::GLSLEditorEditable::duplicate(QWidget*) /home/ola/bin/qtcreator_src/qt-creator-2.2.1-src/lib/qtcreator/plugins/Nokia/libGLSLEditor.so 0 0x7fffe12bbc0f
      10 Core::EditorManager::duplicateEditor(Core::IEditor*) /home/ola/bin/qtcreator_src/qt-creator-2.2.1-src/lib/qtcreator/plugins/Nokia/libCore.so 0 0x7fffece7c5ff
      11 Core::Internal::SplitterOrView::split(Qt::Orientation) /home/ola/bin/qtcreator_src/qt-creator-2.2.1-src/lib/qtcreator/plugins/Nokia/libCore.so 0 0x7fffece8fee3
      12 Core::EditorManager::split(Qt::Orientation) /home/ola/bin/qtcreator_src/qt-creator-2.2.1-src/lib/qtcreator/plugins/Nokia/libCore.so 0 0x7fffece7e47a
      13 Core::EditorManager::qt_metacall(QMetaObject::Call, int, void**) /home/ola/bin/qtcreator_src/qt-creator-2.2.1-src/lib/qtcreator/plugins/Nokia/libCore.so 0 0x7fffecf1781d
      14 QMetaObject::activate qobject.cpp 3287 0x7ffff66b55f8
      15 QAction::triggered moc_qaction.cpp 263 0x7ffff6eb8122
      16 QAction::qt_metacall moc_qaction.cpp 167 0x7ffff6eb9777
      17 QMetaObject::activate qobject.cpp 3287 0x7ffff66b55f8
      18 QAction::triggered moc_qaction.cpp 263 0x7ffff6eb8122
      19 QAction::activate qaction.cpp 1257 0x7ffff6eb830f
      20 QAction::event qaction.cpp 1183 0x7ffff6eb847f
      ... <More>

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            leamelo Leandro T. C. Melo
            pyrrhula Ola Røer Thorsen
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes